# Distill-Yourself

./: .gitignore  README.md  README_EN.md  analyze.py  db.py  pyproject.toml  server.py
.github/: pull_request_template.md
.github/workflows/: test.yml
chatview/: ai_engine.py  cli.py  index.py  search.py  server.py  session_loader.py
chatview/commands/: __init__.py  analysis.py  corrections.py  evolve.py  twin.py
chatview/db/: __init__.py  core.py  evolve.py  insights.py  sessions.py  twin.py
chatview/handlers/: base.py  chat.py  data.py  evolve.py  sync.py  twin.py
chatview/parsers/: __init__.py  claude.py  codex.py
chatview/utils/: __init__.py  constants.py  sync.py  text.py
docs/: TWIN_DURABLE_DAG_ROADMAP.md  USER_GUIDE.md
docs/video/: index.html
static/: app.js  app.old.js  evolve.js  index.html  style.css  style.old.css  twin.js
static/css/: base.css  chat.css  components.css  conversation.css  evolve.css  insights.css  layout.css  sessions.css  style.css  twin.css
static/js/: app.js  chat.js  conversation.js  dom.js  evolve-page.js  export.js  insights.js  keyboard.js  lang.js  search.js  session-ai.js  session-summary.js  sessions.js  state.js  toast.js  utils.js
tests/: test_ai_engine.py  test_analyze.py  test_api.py  test_data_visibility.py  test_db.py  test_evolve_stream.py  test_frontend_routing_static.py  test_frontend_streaming_static.py  test_persona_avatar_static.py  test_runtime_preview_static.py  test_server_parse.py  test_twin_integrity.py
