[project]
name = "distill-yourself"
version = "0.1.0"
description = "Search your Claude Code and Codex history. Distill durable lessons. Teach future sessions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
distill-yourself = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "chatview"]
include = [
    "server.py",
    "db.py",
    "analyze.py",
    "start.sh",
    "chatview/**",
    "static/**",
    "docs/**",
]
